Features Readablity issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -326,8 +326,8 @@ nav a#pull {
 /******************/
 #feature {
 	background: #1D976C;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #93F9B9, #1D976C);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #93F9B9, #1D976C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: -webkit-linear-gradient(to right, #6fbe8c, #136347);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #6fbe8c, #136347); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	padding:3em 0 0em 0em;
 }
 .test-monials h3{
